fix: add blurred background image, adjust size of image

--- a/sass/inhalt/ansprache/_motto.sass
+++ b/sass/inhalt/ansprache/_motto.sass
@@ -210,10 +210,33 @@
 		z-index: 1
 		> picture
 			position: relative
+
+			// Keep after element in center, even with scale(1.1)
+			display: flex
+			justify-content: center
+			align-items: center
+
+			overflow: hidden
 			// margin-top: -14vw
+			width: 100%
+			&::after
+				content: ""
+				position: absolute
+				height: 100%
+				width: 100%
+				background-image: linear-gradient(0deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url("../img/Sternfahrten zugeschnitten.png?as=webp&quality=30&width=1153")
+				filter: blur(8px)
+				// https://stackoverflow.com/a/42963980/11485145
+				transform: scale(1.1)
+			//noinspection CssOverwrittenProperties
 			img
-				max-width: 100%
-				max-height: 80vh
+				width: 100%
+				// Fallback property, in case max() is not supported
+				max-width: 72rem
+				max-width: max(72rem, 60vw)
+				max-height: 70vh
+				position: relative
+				z-index: 1
 			//&::before
 			//	content: ""
 			//	position: absolute
